cmake_minimum_required (VERSION 2.6)
project (Heap)
include_directories ("${PROJECT_SOURCE_DIR}/include")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_executable (heap_test "${PROJECT_SOURCE_DIR}/src/test.cpp")
set(CMAKE_CXX_FLAGS_RELEASE "-std=c++14 -O3")
set(CMAKE_CXX_FLAGS_DEBUG "-std=c++14 -Wall -Wextra -Werror -fsanitize=address -g")
target_link_libraries(heap_test /usr/lib/libgtest.a) 
target_link_libraries(heap_test /usr/lib/x86_64-linux-gnu/libpthread.so)
#SET(CMAKE_CXX_COMPILER /usr/bin/clang++-4.0) 
